nortis-apiのテストを追加